fixed truncation that cut off Edit button

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -206,7 +206,6 @@ p {
 .label {
 	color:#0e7dc2;
 	width: 30%;
-	text-align: right;
 }
 
 #results-intro {
