--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -465,6 +465,7 @@
 	}
 	.request-item {
 		display: flex;
+        flex-direction: column;
 		margin-left: 5vw;
 		border-top: solid .25vw;
 		width: 90vw;
